# ChangeLog for app-vim/minibufexpl
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-vim/minibufexpl/ChangeLog,v 1.30 2012/03/28 06:58:37 ago Exp $

  28 Mar 2012; Agostino Sarubbo <ago@gentoo.org> minibufexpl-6.4.3.ebuild:
  Stable for amd64, wrt bug #404625

*minibufexpl-6.4.3 (31 Oct 2011)

  31 Oct 2011; Tim Harder <radhermit@gentoo.org> +minibufexpl-6.4.3.ebuild:
  Version bump.

  21 Jul 2011; Tim Harder <radhermit@gentoo.org> -minibufexpl-6.4.1_p4.ebuild,
  -minibufexpl-6.4.1_p5.ebuild:
  Remove old.

*minibufexpl-6.4.2 (21 Jul 2011)

  21 Jul 2011; Tim Harder <radhermit@gentoo.org> +minibufexpl-6.4.2.ebuild:
  Version bump.

*minibufexpl-6.4.1_p5 (20 May 2011)

  20 May 2011; Tim Harder <radhermit@gentoo.org> +minibufexpl-6.4.1_p5.ebuild:
  Version bump.

*minibufexpl-6.4.1_p4 (04 May 2011)

  04 May 2011; Tim Harder <radhermit@gentoo.org> +minibufexpl-6.4.1_p4.ebuild:
  Version bump.

  14 Nov 2010; Tim Harder <radhermit@gentoo.org>
  -minibufexpl-6.3.1-r1.ebuild, minibufexpl-6.3.2.ebuild:
  Remove old version. Fix unquoted variables.

  07 Oct 2010; Mart Raudsepp <leio@gentoo.org> minibufexpl-6.3.1-r1.ebuild,
  minibufexpl-6.3.2.ebuild:
  Drop to ~mips

  22 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

  07 Apr 2006; Bryan Østergaard <kloeri@gentoo.org metadata.xml:
  Remove ciaranm from metadata.xml.

  24 Apr 2005; Michael Hanselmann <hansmi@gentoo.org>
  minibufexpl-6.3.2.ebuild:
  Stable on ppc.

  03 Jan 2005; Tom Martin <slarti@gentoo.org> minibufexpl-6.3.2.ebuild:
  Stable on amd64.

  30 Dec 2004; Bryan Østergaard <kloeri@gentoo.org>
  minibufexpl-6.3.2.ebuild:
  Stable on alpha.

  29 Dec 2004; Ciaran McCreesh <ciaranm@gentoo.org>
  -minibufexpl-6.2.6.ebuild, -minibufexpl-6.3.1.ebuild,
  minibufexpl-6.3.2.ebuild:
  x86, sparc, mips stable, tidy up old versions

  28 Dec 2004; Ciaran McCreesh <ciaranm@gentoo.org> :