@@ -1,6 +1,6 @@
-# Copyright 1999-2010 Gentoo Foundation
+# Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-vim/minibufexpl/minibufexpl-6.3.2.ebuild,v 1.9 2010/11/14 06:27:11 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-vim/minibufexpl/minibufexpl-6.3.2.ebuild,v 1.10 2012/04/01 17:20:43 armin76 Exp $
 
 inherit vim-plugin
 
@@ -8,7 +8,7 @@ DESCRIPTION="vim plugin: easily switch between buffers"
 HOMEPAGE="http://www.vim.org/scripts/script.php?script_id=159"
 
 LICENSE="as-is"
-KEYWORDS="alpha amd64 ia64 ~mips ppc sparc x86"
+KEYWORDS="amd64 ~mips ppc x86"
 IUSE=""
 
 VIM_PLUGIN_HELPFILES="minibufexpl.txt"
