@@ -1,6 +1,6 @@
-# Copyright 1999-2011 Gentoo Foundation
+# Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-vim/minibufexpl/minibufexpl-6.4.2.ebuild,v 1.1 2011/07/21 00:50:21 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-vim/minibufexpl/minibufexpl-6.4.2.ebuild,v 1.2 2012/04/01 17:20:43 armin76 Exp $
 
 EAPI=4
 
@@ -12,7 +12,7 @@ HOMEPAGE="https://github.com/fholgado/minibufexpl.vim"
 SRC_URI="https://github.com/fholgado/${MY_PN}/tarball/${PV} -> ${P}.tar.gz"
 
 LICENSE="as-is"
-KEYWORDS="~alpha ~amd64 ~ia64 ~mips ~ppc ~sparc ~x86"
+KEYWORDS="~amd64 ~mips ~ppc ~x86"
 IUSE=""
 
 VIM_PLUGIN_HELPFILES="minibufexpl.txt"
