@@ -1,6 +1,10 @@
 # ChangeLog for app-vim/minibufexpl
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-vim/minibufexpl/ChangeLog,v 1.30 2012/03/28 06:58:37 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-vim/minibufexpl/ChangeLog,v 1.31 2012/04/01 17:20:43 armin76 Exp $
+
+  01 Apr 2012; Raúl Porcel <armin76@gentoo.org> minibufexpl-6.3.2.ebuild,
+  minibufexpl-6.4.2.ebuild, minibufexpl-6.4.3.ebuild:
+  Drop alpha/ia64/sparc keywords
 
   28 Mar 2012; Agostino Sarubbo <ago@gentoo.org> minibufexpl-6.4.3.ebuild:
   Stable for amd64, wrt bug #404625
